# transactions

./: README.md  docker-compose.yml
broker_service/: Dockerfile  setup.cfg
broker_service/api/: __init__.py
broker_service/application/: DTO.py  entities.py  services.py
broker_service/broker/api/: controllers.py
broker_service/broker/app/: broker_api.py
broker_service/broker/application/: entities.py  intefaces.py  services.py
broker_service/broker/database/: repositories.py
broker_service/database/: __init__.py  mapping.py  tables.py
clients_service/: Dockerfile
clients_service/api/: controllers.py
clients_service/app/: clients_api.py
clients_service/clients/api/: auth.py  controllers.py
clients_service/clients/application/: entities.py  intefaces.py  services.py
clients_service/clients/database/: __init__.py  mapping.py  repositories.py  tables.py
clients_service/database/: repositories.py  settings.py
docs/: requests.http
transactions_service/: Dockerfile  setup.cfg
transactions_service/transactions/api/: __init__.py  controllers.py
transactions_service/transactions/app/: transactions_api.py
transactions_service/transactions/application/: entities.py  intefaces.py  services.py
transactions_service/transactions/database/: __init__.py  repositories.py  settings.py
