[metadata]
name = transactions
version = 1.0.0
description = Сервис для работы с транзакциями
author = Дмитрий Кузьмин
author_email = dk_187@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = >=3.8.0

install_requires =
    pydantic~=1.9.0
    SQLAlchemy~=1.4.36
    psycopg2-binary~=2.9.3
    fastapi~=0.75.2
    uvicorn~=0.17.6
    PyJWT~=2.4.0
    requests~=2.27.1
